# llm-evolve

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
configs/: README.md  default_config.yaml  early_stopping_example.yaml  island_config_example.yaml
llm_evolve/: __init__.py  _version.py  cli.py  config.py  controller.py  database.py  evaluation_result.py  evaluator.py  iteration.py  process_parallel.py
llm_evolve/helper/: executor.py
llm_evolve/llm/: __init__.py  ensemble.py  openai.py
llm_evolve/prompt/: __init__.py  sampler.py  templates.py
llm_evolve/utils/: __init__.py  async_utils.py  process_utils.py
openevolve/: cli.py  config.py  controller.py  database.py  evaluator.py  process_parallel.py
openevolve/helper/: __init__.py  executor.py  result.py
openevolve/llm/: ensemble.py
openevolve/prompt/: sampler.py  templates.py
problems/: README.md
problems/function_minimization/: README.md  config.yaml  evaluator.py  initial_program.py
projects/: README.md
tests/: test_artifacts.py  test_artifacts_integration.py  test_cascade_validation.py  test_checkpoint_resume.py  test_code_utils.py  test_database.py  test_database_cleanup.py  test_evaluator_timeout.py  test_feature_stats_persistence.py  test_grid_stability.py  test_island_isolation.py  test_island_migration.py  test_island_parent_consistency.py  test_island_tracking.py  test_iteration_counting.py  test_llm_ensemble.py  test_map_elites_features.py  test_process_parallel.py  test_prompt_sampler.py  test_prompt_sampler_comprehensive.py  test_valid_configs.py
(+26 files in other folders)
